--- a/static/css/main.css
+++ b/static/css/main.css
@@ -21,12 +21,78 @@ header {
     margin: 0 auto;
     margin-top: 20px;
     top: 20px;
+    padding: 0;
 }
 
 #myCanvas {
+    display: block;
+    margin-bottom: 20px;
     background-color: rgb(195,238,238);
 }
 
+#messages {
+    width: 100%;
+}
+
 #chat_box {
-  visibility: hidden;
+    width: 100%;
+    height: 240px;
+    background-color: green;
+    font-size: 13px;
+    font-family: Helvetica;
+    position: relative;
+    display: none;
+    overflow-y: scroll;
+}
+
+#messages {
+    width: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+#message-form {
+    position: relative;
+    float: bottom;
+    height: 21px;
+    width: 100%;
+    display: none;
+}
+
+#message-input {
+    display: block;
+    border: 0px;
+    width: 90%;
+    padding: 0;
+    height: 21px;
+}
+
+#message-send {
+    width: 10%;
+    border: 0;
+    margin: 0;
+    height: 21px;
+    float: right;
+}
+
+.message-wrapper {
+    width : 100%;
+}
+
+.message-username {
+    border: 0;
+    margin: 0;
+    width: 15%;
+    height: 100%;
+    padding 0;
+    float: left;
+}
+
+.message-content {
+    border: 0;
+    margin: 0px;
+    padding: 0;
+    height 100%;
+    width: 85%;
+    float: right;
 }
