--- a/static/css/main.css
+++ b/static/css/main.css
@@ -37,12 +37,13 @@ header {
 #chat_box {
     width: 100%;
     height: 240px;
-    background-color: green;
+    background-color: #abbbc3;
+    color: black;
     font-size: 13px;
     font-family: Helvetica;
     position: relative;
     display: none;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 #messages {
@@ -65,6 +66,11 @@ header {
     width: 90%;
     padding: 0;
     height: 21px;
+    text-indent : 5px;
+}
+
+input:focus {
+    outline: 0;
 }
 
 #message-send {
@@ -77,9 +83,11 @@ header {
 
 .message-wrapper {
     width : 100%;
+    display: flex;
 }
 
 .message-username {
+    word-wrap: break-word;
     border: 0;
     margin: 0;
     width: 15%;
@@ -89,10 +97,11 @@ header {
 }
 
 .message-content {
+    word-wrap: break-word;
     border: 0;
     margin: 0px;
     padding: 0;
-    height 100%;
+    height: 100%;
     width: 85%;
     float: right;
 }
