--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,7 +2,7 @@ body {
     font-size: 20px;
     padding: 0px;
     margin: 0px;
-    font-family : "Comic Sans MS";
+    font-family : "Helvetica";
     color: white;
     background-color: rgb(40,20,40);
 }
